--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "if-env": "^1.0.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.3.16",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
